--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=b779ada79503313ed5ffeda029312de1
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-    DATABASE_URL="mysql://root@127.0.0.1:3306/wetek"
+    DATABASE_URL="mysql://root@127.0.0.1:3306/wetek_user"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -33,10 +33,9 @@ APP_SECRET=b779ada79503313ed5ffeda029312de1
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
-MAILER_DSN=smtp://aa1e9d3e8bc5de:85adbd260e515f@sandbox.smtp.mailtrap.io:2525
+ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
