--- a/.env
+++ b/.env
@@ -17,7 +17,13 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=b779ada79503313ed5ffeda029312de1
+MAILER_DSN=gmail+smtp://yo.yotalent7:mzxrawhdlonardye@default
 ###< symfony/framework-bundle ###
+
+###> karser/karser-recaptcha3-bundle ###
+RECAPTCHA_PUBLIC_KEY=6Lf8WY8pAAAAAESr9O046qAwwHgyNACXLg3V5PEN
+RECAPTCHA_SECRET_KEY=6Lf8WY8pAAAAAEHzQb3MEGl1eb_TaKD8Hke3dI7i
+###< karser/karser-recaptcha3-bundle ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
