Commit metier API
Commit 3/8/2024

--- a/.env
+++ b/.env
@@ -39,3 +39,8 @@ APP_SECRET=b779ada79503313ed5ffeda029312de1
 ###> symfony/mailer ###
 MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
+
+###> victor-prdh/recaptcha-bundle ###
+# GOOGLE_RECAPTCHA_SITE_KEY=6LdYNoYpAAAAAKO1fJQfF3ksWzquJb1ghrfGXt3w
+# GOOGLE_RECAPTCHA_SECRET_KEY=6LdYNoYpAAAAAMuOIbAnftOr9deHQ_xbM1qJKhXp
+###< victor-prdh/recaptcha-bundle ###
