--- a/.env
+++ b/.env
@@ -37,10 +37,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://aa1e9d3e8bc5de:85adbd260e515f@sandbox.smtp.mailtrap.io:2525
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
-
-###> symfony/google-mailer ###
-# Gmail SHOULD NOT be used on production, use it in development only.
-# MAILER_DSN=gmail://USERNAME:PASSWORD@default
-###< symfony/google-mailer ###
